--- a/hobbies.htm
+++ b/hobbies.htm
@@ -15,7 +15,7 @@
 
 <header>
 <div class="row">
-  <div class="left"><p><img src="img_girl.jpg" alt="me" style="max-width:100%;height:auto;"></p></div>
+  <div class="left"><p><img src="paul.jpg" alt="me" style="max-width:100%;height:auto;"></p></div>
   <div class="main"><h2>Pawel Kiczko</h2></div>
   <div class="right"><p><img src="integrify_i.png" id='logo' alt="me" style="max-width:100%;height:auto;"></p></div>
 </div>
