--- a/projects.htm
+++ b/projects.htm
@@ -43,24 +43,11 @@
 All my latest projects and written code is on the GitHub, thus underneath link provided therein.
 
 </section>
-<h3 style="text-align: center">GitHub links:</h3>
+<h3 style="text-align: center">React app links (AWS S3 bucket):</h3>
 <nav>
-  <a href="https://github.com/pkiczko/CodeAcademy" class="button4" style="height:80px;">CodeAcademy general<br>
-  <font class='code'>JavaScript</font></a>
-  <a href="https://github.com/pkiczko/workAround" alt='small project within CodeAcademy' class="button4"  style="height:80px;">CodeAcademy workAround<br>
-  <font class='code'>JavaScript</font></a>
-  <a href="https://github.com/pkiczko/JavaScriptRequests" class="button4"  style="height:80px;">CodeAcademy requests<br>
-  <font class='code'>JavaScript</font></a>
-  <a href="https://github.com/pkiczko/projectI1" class="button4"  style="height:80px;">Portfolio - Project 1<br>
-  <font class='code'>HTML/CSS/JavaScript</font></a>
-  <a href="https://github.com/pkiczko/projectI2" class="button4"  style="height:80px;">Website - Project 2<br>
-  <font class='code'>HTML/CSS:flexbox grid/JavaScript</font></a>
-  <a href="https://github.com/pkiczko/projectI3" class="button4"  style="height:80px;">Another Website - Project 3<br>
-  <font class='code'>HTML/CSS:flexbox grid/JavaScript</font></a>
-  <a href="https://github.com/pkiczko/projectI5" class="button4"  style="height:80px;">Multiple works - Project 5<br>
-  <font class='code'>HTML/CSS/JavaScript</font></a>
-  <a href="https://github.com/pkiczko/countries" class="button4"  style="height:80px;">Countries Project<br>
-  <font class='code'>HTML/CSS/JavaScript</font></a>
+  <a href="https://s3-eu-west-1.amazonaws.com/reactapps/index.html" class="button4" style="height:80px;">Countries<br>
+  <font class='code'>HTML/CSS/ReactJS</font></a>
+
 </nav>
 <h3 style="text-align: center">Website links:</h3>
 <nav>
@@ -80,6 +67,27 @@ All my latest projects and written code is on the GitHub, thus underneath link p
   <!-- <a href="http://pkiczko.github.io/grid/index.htm" class="button4" style="height:80px;">Another Portfolio<br>
   <font class='code'>HTML, CSS:grid</font></a> -->
 </nav>
+
+<h3 style="text-align: center">GitHub links:</h3>
+<nav>
+  <a href="https://github.com/pkiczko/CodeAcademy" class="button4" style="height:80px;">CodeAcademy general<br>
+  <font class='code'>JavaScript</font></a>
+  <a href="https://github.com/pkiczko/workAround" alt='small project within CodeAcademy' class="button4"  style="height:80px;">CodeAcademy workAround<br>
+  <font class='code'>JavaScript</font></a>
+  <a href="https://github.com/pkiczko/JavaScriptRequests" class="button4"  style="height:80px;">CodeAcademy requests<br>
+  <font class='code'>JavaScript</font></a>
+  <a href="https://github.com/pkiczko/projectI1" class="button4"  style="height:80px;">Portfolio - Project 1<br>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/projectI2" class="button4"  style="height:80px;">Website - Project 2<br>
+  <font class='code'>HTML/CSS:flexbox grid/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/projectI3" class="button4"  style="height:80px;">Another Website - Project 3<br>
+  <font class='code'>HTML/CSS:flexbox grid/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/projectI5" class="button4"  style="height:80px;">Multiple works - Project 5<br>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
+  <a href="https://github.com/pkiczko/countries" class="button4"  style="height:80px;">Countries Project<br>
+  <font class='code'>HTML/CSS/JavaScript</font></a>
+</nav>
+
 <br>
 <br>
 <footer>
